Changed "Foreign Audio Search" to "Foreign audio scan" and added an option in the Picker to separately include it alongside other selection rules for normal subtitles. Changed audio and subtitle selection mode radio buttons to a more compact drop down. Added tooltip info for all audio and subtitle selection modes.

--- a/VidCoder/Resources/EnumsRes.resx
+++ b/VidCoder/Resources/EnumsRes.resx
@@ -333,4 +333,16 @@
     <value>Selected</value>
     <comment>Label for the option to order dragged files as they had been selected in File explorer</comment>
   </data>
+  <data name="SubtitleBurnInSelection_First" xml:space="preserve">
+    <value>First</value>
+  </data>
+  <data name="SubtitleBurnInSelection_ForeignAudioTrack" xml:space="preserve">
+    <value>Foreign audio track</value>
+  </data>
+  <data name="SubtitleBurnInSelection_ForeignAudioTrackElseFirst" xml:space="preserve">
+    <value>Foreign audio track, else First</value>
+  </data>
+  <data name="SubtitleBurnInSelection_None" xml:space="preserve">
+    <value>None</value>
+  </data>
 </root>
