--- a/VidCoder/Resources/EncodingRes.resx
+++ b/VidCoder/Resources/EncodingRes.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Save" xml:space="preserve">
     <value>Save</value>
@@ -798,9 +798,6 @@ Lapsharp sharpens using convolution kernels approximating Laplacian edge filters
   <data name="NVEncPreset_hp" xml:space="preserve">
     <value>High Performance</value>
   </data>
-  <data name="PickColorButton" xml:space="preserve">
-    <value>Pick color…</value>
-  </data>
   <data name="Bottom" xml:space="preserve">
     <value>Bottom</value>
   </data>
@@ -833,5 +830,8 @@ Lapsharp sharpens using convolution kernels approximating Laplacian edge filters
   <data name="CannotSwitchEncodingPresetDueToPicker" xml:space="preserve">
     <value>Cannot switch encoding preset, it has been locked in the Picker window.</value>
     <comment>Message to show when the user is blocked from switching an encoding preset due to a Picker setting.</comment>
+  </data>
+  <data name="PadColorTextToolTip" xml:space="preserve">
+    <value>Format: FFFFFF</value>
   </data>
 </root>
