Added warning for Microsoft Store version that you need to download the installer for further updates.

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -729,4 +729,7 @@
   <data name="AutoPauseResumeProcess" xml:space="preserve">
     <value>Automatically resuming, processes are gone.</value>
   </data>
+  <data name="AppxGetUpdateButton" xml:space="preserve">
+    <value>Get update...</value>
+  </data>
 </root>
